Dark mode login button colour fixed & mongo not exposed with --noauth

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -144,8 +144,8 @@ html {
   --surface-tertiary: var(--gray-700);
   --surface-tertiary-alt: var(--gray-700);
   --surface-dialog: var(--gray-850);
-  --surface-submit: var(--green-700);
-  --surface-submit-hover: var(--green-800);
+  --surface-submit: var(--br-blue);
+  --surface-submit-hover: var(--br-blue-hover);
   --surface-destructive: var(--red-800);
   --surface-destructive-hover: var(--red-900);
   --surface-chat: var(--gray-700);
